[project]
name = "parking360"
version = "0.1.0"
description = "Detector de celdas vacías en parking usando cámara 360"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "opencv-python",
    "ultralytics",  
    "torch",        
    "torchvision",
    "matplotlib",  
    ]



[project.scripts]
start = "main:main"

[tool.setuptools]
packages = ["src"]
py-modules = ["main"]
include-package-data = true

[tool.uv.workspace]
members = ["run"]


#[build-system]
#requires = ["setuptools>=61.0", "wheel"]
#build-backend = "setuptools.build_meta"
